# many_backend

./: .gitignore
dart/: README.md  pubspec.yaml
dart/lib/database/: database.dart  database.g.dart
dart/lib/routes/: persona_routes.dart
django/: README.md  requests.http
django/persona_project/: asgi.py  settings.py  urls.py  wsgi.py
django/personas/: models.py  serializers.py  urls.py  views.py
django/personas/migrations/: 0001_initial.py
fastapi/: README.md  pyproject.toml
fastapi/app/: database.py  main.py  models.py  schemas.py
flask/: README.md  config.py  main.py  models.py  requirements.txt
go/: README.md  go.mod
go/cmd/server/: main.go
go/internal/config/: database.go
go/internal/handlers/: persona.go
go/internal/models/: persona.go
java_quarkus/: README.md  pom.xml
java_quarkus/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
java_quarkus/src/main/resources/: application.properties
java_spring/: README.md  pom.xml  requests.http
java_spring/src/main/resources/: application.yaml
kotlin_ktor/: README.md  build.gradle.kts  requests.http
kotlin_ktor/src/main/kotlin/com/example/: Application.kt
kotlin_ktor/src/main/resources/: logback.xml
kotlin_spring/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
kotlin_spring/src/main/resources/: application.yaml
typescript/: README.md  package.json  requests.http
typescript/prisma/: schema.prisma
typescript/prisma/migrations/20260407225512_init/: migration.sql
typescript/src/: index.ts
(+15 files in other folders)
